[FD-866] Mobile notice fix
Fixed icon dimension for mobile notice. Too small.

--- a/app/assets/stylesheets/blocks/_notice.scss
+++ b/app/assets/stylesheets/blocks/_notice.scss
@@ -32,7 +32,7 @@
   
   .notice__reward-image{
     padding: 5px; 
-    max-width: 40px;
+    max-width: 60px;
   }
   
   .notice__title{
