--- a/app/assets/stylesheets/flexsliders/_ctas.scss
+++ b/app/assets/stylesheets/flexsliders/_ctas.scss
@@ -192,7 +192,10 @@
     }
     
     .glyphicon-comment--notice{
-      font-size: 24px;
+      font-size: 45px;
       line-height: 45px;
+      display: block;
+      width: 45px;
+      margin: 0 auto;
     }
 }
